fix modal and  +gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,7 @@ font-family: 'Roboto', sans-serif; */
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 5;
 
   width: 100%;
   height: 100%;
@@ -313,6 +314,8 @@ font-family: 'Roboto', sans-serif; */
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
 }
 
 .modal-button:hover svg {
@@ -355,8 +358,12 @@ font-family: 'Roboto', sans-serif; */
 }
 
 .form-field input {
+  padding: 11px 14px 11px 42px;
+}
+
+.form-field input,
+.form-field textarea {
   width: 100%;
-  padding: 14px 14px 14px 42px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -383,15 +390,10 @@ font-family: 'Roboto', sans-serif; */
 }
 
 .form-field textarea {
-  width: 100%;
   height: 120px;
   padding: 12px 16px;
   margin-bottom: 10px;
   resize: none;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-
-  transform: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field textarea::placeholder {
@@ -452,10 +454,14 @@ font-family: 'Roboto', sans-serif; */
 .chek-icon svg {
   fill: transparent;
   background-origin: border-box;
+
   position: absolute;
   top: 4px;
   left: 0;
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
 }
 
 .input:checked + .chek-icon svg {
@@ -507,17 +513,14 @@ font-family: 'Roboto', sans-serif; */
 .advantages-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+
+  gap: 30px;
 
   list-style: none;
 }
 
 .advantages-list li {
-  flex-basis: calc((100% - 90px) / 4);
-}
-
-.advantages-list li:not(:last-child) {
-  margin-right: 30px;
+  max-width: 270px;
 }
 
 .advantages-svg {
@@ -565,18 +568,14 @@ font-family: 'Roboto', sans-serif; */
 .doing-items {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+
+  gap: 30px;
 
   list-style: none;
 }
 
 .doing-items li {
   position: relative;
-  flex-basis: calc((100% - 60px) / 3);
-}
-
-.doing-items li:not(:last-child) {
-  margin-right: 30px;
 }
 
 .applications {
@@ -612,21 +611,16 @@ font-family: 'Roboto', sans-serif; */
 .team-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+
+  gap: 30px;
 
   list-style: none;
 }
 
 .team-item {
-  flex-basis: calc((100% - 90px) / 4);
-
   background-color: var(--white-color-text);
   box-shadow: var(--team-item-shadow);
   border-radius: 0px 0px 4px 4px;
-}
-
-.team-item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .team-content {
@@ -687,13 +681,12 @@ font-family: 'Roboto', sans-serif; */
 
 .client-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
-  list-style: none;
-}
+  gap: 30px;
 
-.client-item:not(:last-child) {
-  margin-right: 30px;
+  list-style: none;
 }
 
 .client-link {
@@ -949,10 +942,6 @@ font-family: 'Roboto', sans-serif; */
 }
 
 .works-list li {
-  margin-right: 30px;
-  margin-bottom: 30px;
-  flex-basis: calc((100% - 60px) / 3);
-
   border: 1px solid var(--header-border);
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
